--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,96 @@
 body {
   
-  font-family:"Segoe UI", "Roboto", "Oxygen",
+  font-family: "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #root {
+/* html, body, #root {
   height: 100%;
+} */
+
+/* Loading Spinner */
+.lds-default {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.lds-default div {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background: #fff;
+  border-radius: 50%;
+  animation: lds-default 1.2s linear infinite;
+}
+.lds-default div:nth-child(1) {
+  animation-delay: 0s;
+  top: 229px;
+  left: 213px;
+}
+.lds-default div:nth-child(2) {
+  animation-delay: -0.1s;
+  top: 218px;
+  left: 210px;
+}
+.lds-default div:nth-child(3) {
+  animation-delay: -0.2s;
+  top: 209px;
+  left: 201px;
+}
+.lds-default div:nth-child(4) {
+  animation-delay: -0.3s;
+  top: 206px;
+  left: 189px;
+}
+.lds-default div:nth-child(5) {
+  animation-delay: -0.4s;
+  top: 209px;
+  left: 178px;
+}
+.lds-default div:nth-child(6) {
+  animation-delay: -0.5s;
+  top: 218px;
+  left: 169px;
+}
+.lds-default div:nth-child(7) {
+  animation-delay: -0.6s;
+  top: 229px;
+  left: 166px;
+}
+.lds-default div:nth-child(8) {
+  animation-delay: -0.7s;
+  top: 241px;
+  left: 169px;
+}
+.lds-default div:nth-child(9) {
+  animation-delay: -0.8s;
+  top: 250px;
+  left: 178px;
+}
+.lds-default div:nth-child(10) {
+  animation-delay: -0.9s;
+  top: 253px;
+  left: 189px;
+}
+.lds-default div:nth-child(11) {
+  animation-delay: -1s;
+  top: 250px;
+  left: 201px;
+}
+.lds-default div:nth-child(12) {
+  animation-delay: -1.1s;
+  top: 241px;
+  left: 209px;
+}
+@keyframes lds-default {
+  0%, 20%, 80%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
 }
